--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,143 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    background-color:#282828;
+    color: white;
+    font-family: 'Trebuchet MS', sans-serif;
+    
+
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.root{
+    display: flex;
+    flex-direction: column;
 }
+
+header{
+    background-color: #404040;
+    display: flex;
+    padding: 1rem;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 50px;
+    box-shadow: 3px 3px 5px rgb(0,0,0.1);
+}
+
+
+.search{
+    background-color: transparent;
+    color: white;
+    border: 2px solid #282828;;
+    border-radius: 50px;
+    font-size: 1.2rem;
+    padding: 0.5rem 0.5rem;
+}
+
+.search:focus{
+    outline: none;
+}
+
+ .movie {
+     width: 150px;
+     margin: 1rem;
+     background-color: #404040;
+     border-radius: 3px;
+     box-shadow: 3px 3px 5px rgb(0,0,0.1);
+     overflow: hidden;
+     position: relative;
+     
+ }
+
+ .movie img{
+    width: 100%;
+ }
+
+ 
+
+ .movieContainer{
+     display: flex;
+     flex-wrap: wrap;
+     justify-content: center;
+ }
+
+ .movieInfo{
+     display: flex;
+     align-items: center;
+     justify-content: space-between;
+     padding: 1rem;
+
+ }
+ .movieInfo h3{
+     margin: 0px;
+     overflow: hidden;
+     max-height: 50px;
+     font-size: 15px;
+ }
+ .movieInfo span{
+     padding: 5px;
+ }
+
+ .imgContainer {
+    position: relative;
+    text-align: center;
+  }
+
+  .rank {
+    position: absolute;
+    bottom: 191px;
+    width: 30px;
+    height: 20px;
+    color: black;
+    border-bottom-right-radius: 3px;
+    background-color: rgb(255, 187, 0);
+    font-weight: bold;
+  }
+
+  .noRank{
+      visibility: hidden;
+  }
+
+  .movieHover{
+    background-color: white;
+    color: #282828;
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px;
+    padding: 1rem;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    overflow: auto;
+    height: 81.25%;
+    transform: translateY(101%);
+    transition: transform 0.3s ease-in-out;
+    opacity: 0.9;
+  }
+
+  .movieHover h1{
+    font-size: larger;
+  }
+
+  .movie:hover .movieHover{
+    transform: translateY(0%);
+  }
+
+  .tag{
+    background-color: #282828;
+    border-radius: 5px;
+    padding: 0.5rem;
+  }
+
+  .tag.green{
+    color: green;
+  }
+
+  .tag.orange{
+    color: orange;
+  }
+
+  .tag.red{
+    color:red;
+  }
+  
+  .tag.none{
+    visibility: hidden;
+  }
